# sp2025_var25

./: .gitignore  CMakeLists.txt  CMakePresets.json  QUICK_START.md  README.md
assembly_pattern/: CMakeLists.txt  assembly_pattern.vcxproj
cw_sp2__2025_2026/: CMakeLists.txt  cw_sp2__2025_2026.vcxproj
dfa_generator__2025/: CMAKE_MIGRATION.md  CMakeLists.txt  README.md  SETUP_CHECKLIST.md  VISUAL_STUDIO_GUIDE.md  dfa_generator__2025.vcxproj  dfa_generator___part_impl.cpp
dpda1_for_ll2_generator__2025/: CMakeLists.txt  dpda1_for_ll2_generator__2025.vcxproj  dpda1_for_ll2_generator__2025.vcxproj.filters
image_pattern_generator/: CMakeLists.txt  image_pattern_generator.vcxproj
variant_specification/: EBNF_N1.h  EBNF_N2.h  LexicaByRegExAndSyntaxByLL2protototype.h  README.md
verify_syntax_by_EBNF__2025/: CMakeLists.txt  verify_syntax_by_EBNF__2025.vcxproj
verify_syntax_by_EBNF_nonpacked__2025/: CMakeLists.txt  verify_syntax_by_EBNF_nonpacked__2025.vcxproj
wrapWithInOutPipe/: CMakeLists.txt  wrapWithInOutPipe.vcxproj
